smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-with-member.smithy
// Use statements cannot use members
$version: "2.0"
namespace smithy.example

use com.foo#Bar$baz
